<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.adroitlogic.x.samples</groupId>
    <artifactId>rest-auth-jwt</artifactId>
    <version>21.09-beta1</version>
    <packaging>xpr</packaging>

    <name>AdroitLogic Project-X Sample - REST JWT Authentication</name>
    <description>This sample contains an integration project developed using the AdroitLogic Project-X framework
        demonstrating its JWT authentication feature for REST requests</description>

    <url>https://developer.adroitlogic.com/samples/latest/intermediary/rest-auth-jwt/</url>

    <repositories>
        <repository>
            <id>adroitlogic-x-releases</id>
            <name>AdroitLogic Project-X releases repository</name>
            <url>https://releases.xrepo.adroitlogic.com/maven2</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>fail</checksumPolicy>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>adroitlogic-x-snapshots</id>
            <name>AdroitLogic Project-X snapshots repository</name>
            <url>https://snapshots.xrepo.adroitlogic.com/maven2</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>adroitlogic-x-releases</id>
            <name>AdroitLogic Project-X plugin releases repository</name>
            <url>https://releases.xrepo.adroitlogic.com/maven2</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>fail</checksumPolicy>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>adroitlogic-x-snapshots</id>
            <name>AdroitLogic Project-X plugin snapshots repository</name>
            <url>https://snapshots.xrepo.adroitlogic.com/maven2</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>adroitlogic-x-releases-deploy</id>
            <name>AdroitLogic Project-X releases repository</name>
            <url>s3://releases.xrepo.adroitlogic.com/maven2</url>
        </repository>
        <snapshotRepository>
            <id>adroitlogic-x-snapshots-deploy</id>
            <name>AdroitLogic Project-X snapshots repository</name>
            <url>s3://snapshots.xrepo.adroitlogic.com/maven2</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <!-- Project-X API containing all interfaces (message and context, flow, project, transport, connector, processor, etc) -->
        <dependency>
            <groupId>org.adroitlogic.x</groupId>
            <artifactId>x-api</artifactId>
            <version>${x.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- base for creating new connectors/processors -->
        <dependency>
            <groupId>org.adroitlogic.x</groupId>
            <artifactId>x-base</artifactId>
            <version>${x.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- commonly used flow-control, scoping and transactional elements -->
        <dependency>
            <groupId>org.adroitlogic.x</groupId>
            <artifactId>x-components</artifactId>
            <version>${x.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- annotations for hooking-in to Project-X lifecycle and defining metrics, features, connectors/processors, etc -->
        <dependency>
            <groupId>org.adroitlogic.x</groupId>
            <artifactId>x-annotations</artifactId>
            <version>${x.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- includes a full logging stack covering log4j 1/2, slf4j, jcl, jul -->
        <dependency>
            <groupId>org.adroitlogic.x.logging</groupId>
            <artifactId>x-logging-all</artifactId>
            <version>${x.version}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <!-- container/driver for launching a Project-X instance -->
        <dependency>
            <groupId>org.adroitlogic.x</groupId>
            <artifactId>x-server</artifactId>
            <version>${x.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- base for defining/gathering metrics; to actually publish them, add a metrics implementation (x-metrics-es-transport|rest) -->
        <dependency>
            <groupId>org.adroitlogic.x</groupId>
            <artifactId>x-metrics-base</artifactId>
            <version>${x.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- actual connector/processor libraries (from Component Registry) used to build the integration flow for your use case -->
        <dependency>
            <groupId>org.adroitlogic.x.connectors</groupId>
            <artifactId>x-connector-nio-http</artifactId>
            <version>${x.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.7.0</version>
        </dependency>
        <dependency>
            <groupId>org.adroitlogic.x.processors</groupId>
            <artifactId>x-processor-payload</artifactId>
            <version>${x.version}</version>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <extension>
                <groupId>org.adroitlogic.build</groupId>
                <artifactId>aws-maven</artifactId>
                <version>${aws-maven.version}</version>
            </extension>
        </extensions>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.adroitlogic.x.tools.maven</groupId>
                <artifactId>x-project-plugin</artifactId>
                <version>${project-plugin-version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.7.2</version>
                <configuration>
                    <argLine>-Xms256m -Xmx1024m -Dunittest=true</argLine>
                    <forkMode>pertest</forkMode>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <useManifestOnlyJar>false</useManifestOnlyJar>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <forkedProcessTimeoutInSeconds>360</forkedProcessTimeoutInSeconds>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>*</exclude>
                </excludes>
            </resource>
        </resources>
    </build>

    <properties>
        <x.version>${project.version}</x.version>
        <project-plugin-version>${x.version}</project-plugin-version>
        <aws-maven.version>1.0.1</aws-maven.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>